testsuite/tests/rename/should_fail/T25877.hs
module T25877 where
import qualified T25877_aux as X (A)
import qualified T25877_aux as Y (A(..))

test = X.A
